[package]
name = "glass"
version = "0.1.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.5"
serde = { version = "1.0.123", features = ["derive"] }
complot = { git = "https://github.com/rconan/complot.git", rev = "9f3be3f" }
serde-pickle = "0.6.2"
spade = "1.8.2"
geotrans = { git = "https://github.com/rconan/geotrans.git", rev = "75268a5"}
gmt-kpp = { git = "https://github.com/rconan/gmt-kpp.git", rev = "e081c6e" }
rayon = "1.5.0"
structopt = "0.3.21"
plotters = "0.3.1"
nalgebra = "0.29.0"
